002 | Changes in styles

--- a/index_ru.html
+++ b/index_ru.html
@@ -78,6 +78,7 @@
     <div class="localization-link">
       <a href="./index_en.html" class="button" rel="noopener noreferrer">In English</a>
     </div>
+    <div class="empty"></div>
   </div>
 </body>
 </html>
