--- a/index_en.html
+++ b/index_en.html
@@ -78,6 +78,7 @@
     <div class="localization-link">
       <a href="./index_ru.html" class="button" rel="noopener noreferrer">По-русски</a>
     </div>
+    <div class="empty"></div>
   </div>
 </body>
 </html>
