003 | Removed hidden from paralax elements

--- a/index_ru.html
+++ b/index_ru.html
@@ -17,7 +17,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_002.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -30%; right:15%; width: 350px; height: 48px!important;">На множество мельчайших песчинок</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -30%; right:15%; width: 350px; height: 48px!important;">На множество мельчайших песчинок</span>
     </div>
 
     <div class="block block_3">
@@ -28,7 +28,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_004.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -50%; left: 0px; width: 170px;">И увидеть всё </span>
+      <span class="block__string parallax-layer parallax-text" style="top: -50%; left: 0px; width: 170px;">И увидеть всё </span>
     </div>
 
     <div class="block block_5">
@@ -39,7 +39,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_006.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: 0%; right:0%; width: 210px;">На деревьях всех</span>
+      <span class="block__string parallax-layer parallax-text" style="top: 0%; right:0%; width: 210px;">На деревьях всех</span>
     </div>
 
     <div class="block block_7">
@@ -50,7 +50,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_008.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -20%; left:0%; width: 250px; height: 48px!important;">Увидеть как гепард бежит за антилопой </span>
+      <span class="block__string parallax-layer parallax-text" style="top: -20%; left:0%; width: 250px; height: 48px!important;">Увидеть как гепард бежит за антилопой </span>
     </div>
 
     <div class="block block_9">
@@ -61,7 +61,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_010.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -50%; right:15%; width: 210px; height: 48px!important;">Вообщем всё всё в этом мире</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -50%; right:15%; width: 210px; height: 48px!important;">Вообщем всё всё в этом мире</span>
     </div>
 
     <div class="block block_11">
@@ -72,7 +72,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_012.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -30%; left:15%; width: 270px; height: 48px!important;">Как солнышко встречает этот день…</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -30%; left:15%; width: 270px; height: 48px!important;">Как солнышко встречает этот день…</span>
     </div>
 
     <div class="localization-link">
