--- a/index_en.html
+++ b/index_en.html
@@ -17,7 +17,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_002.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: 30%; right:15%; width: 350px;">Into many tiny grains of sand</span>
+      <span class="block__string parallax-layer parallax-text" style="top: 30%; right:15%; width: 350px;">Into many tiny grains of sand</span>
     </div>
 
     <div class="block block_3">
@@ -28,7 +28,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_004.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -30%; right:0; width: 260px;">And to see everything</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -30%; right:0; width: 260px;">And to see everything</span>
     </div>
 
     <div class="block block_5">
@@ -39,7 +39,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_006.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: 0%; right:0%; width: 200px;">On all the trees</span>
+      <span class="block__string parallax-layer parallax-text" style="top: 0%; right:0%; width: 200px;">On all the trees</span>
     </div>
 
     <div class="block block_7">
@@ -50,7 +50,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_008.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -20%; left:0%; width: 280px; height: 50px!important;">Watch a cheetah chase an antelope</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -20%; left:0%; width: 280px; height: 50px!important;">Watch a cheetah chase an antelope</span>
     </div>
 
     <div class="block block_9">
@@ -61,7 +61,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_010.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: 5%; right:15%; width: 230px; height: 50px!important;">Everything in this world at all</span>
+      <span class="block__string parallax-layer parallax-text" style="top: 5%; right:15%; width: 230px; height: 50px!important;">Everything in this world at all</span>
     </div>
 
     <div class="block block_11">
@@ -72,7 +72,7 @@
       <div class="parallax-layer parallax-image">
         <img src="./assets/images/img_012.jpg">
       </div>
-      <span class="block__string parallax-layer parallax-text hidden" style="top: -30%; left:15%; width: 200px; height: 50px!important;">How the sun greets this day ...</span>
+      <span class="block__string parallax-layer parallax-text" style="top: -30%; left:15%; width: 200px; height: 50px!important;">How the sun greets this day ...</span>
     </div>
 
     <div class="localization-link">
