--- a/simple/index_ru.html
+++ b/simple/index_ru.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Маришка</title>
+  <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png" />
   <link rel="stylesheet" href="./style.css">
   <script src="./script.js" defer></script>
 </head>
@@ -30,7 +31,7 @@
     </div>
 
     <div class="block block_6">
-      <span class="block__string hidden" style="bottom: 5%; right:25%">На деревьях всех</span>
+      <span class="block__string hidden" style="top: 5%; left:8%">На деревьях всех</span>
     </div>
 
     <div class="block block_7">
@@ -46,15 +47,15 @@
     </div>
 
     <div class="block block_10">
-      <span class="block__string hidden" style="bottom: 15%; left:7%">В общем всё всё<br> в этом мире</span>
+      <span class="block__string hidden" style="top: 5%; right:7%">В общем всё всё<br> в этом мире</span>
     </div>
 
     <div class="block block_11">
-      <span class="block__string hidden" style="top: 12%; right:10%;">И увидеть в каждом <br> уголке планеты</span>
+      <span class="block__string hidden" style="top: 12%; left:10%;">И увидеть в каждом <br> уголке планеты</span>
     </div>
 
     <div class="block block_12">
-      <span class="block__string hidden" style="top: 10%; left:7%;">Как солнышко<br> встречает этот день…</span>
+      <span class="block__string hidden" style="top: 11%; left:17%; text-align: center;">Как солнышко<br> встречает этот день…</span>
     </div>
 
     <div class="localization-link">
