--- a/simple/index_en.html
+++ b/simple/index_en.html
@@ -10,7 +10,7 @@
 <body>
   <div class="main-wrapper">
     <div class="block block_1">
-      <span class="block__string hidden" style="top: 15%; left:11%">I would like to dissolve</span>
+      <span class="block__string hidden" style="top: 15%; left:15%">I would like to dissolve</span>
     </div>
 
     <div class="block block_2">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="block block_6">
-      <span class="block__string hidden" style="bottom: 5%; right:25%">On all the trees</span>
+      <span class="block__string hidden" style="top: 5%; left:8%">On all the trees</span>
     </div>
 
     <div class="block block_7">
@@ -46,15 +46,15 @@
     </div>
 
     <div class="block block_10">
-      <span class="block__string hidden" style="bottom: 15%; left:7%">Everything in this<br> world at all</span>
+      <span class="block__string hidden" style="top: 5%; right:7%">Everything in this<br> world at all</span>
     </div>
 
     <div class="block block_11">
-      <span class="block__string hidden" style="top: 12%; right:10%;">To see in every corner <br> of the planet</span>
+      <span class="block__string hidden" style="top: 12%; left:10%;">To see in every corner <br> of the planet</span>
     </div>
 
     <div class="block block_12">
-      <span class="block__string hidden" style="top: 10%; left:7%;">How the sun<br> greets this day ...</span>
+      <span class="block__string hidden" style="top: 11%; left:17%; text-align: center;">How the sun<br> greets this day ...</span>
     </div>
 
     <div class="localization-link">
