006 | Added og image

--- a/simple/index_ru.html
+++ b/simple/index_ru.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Маришка</title>
+  <meta property="og:title" content="Кое-что из головы Маришки" />
+  <meta property="og:image" content="../assets/images/og_image.jpg" />
   <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png" />
   <link rel="stylesheet" href="./style.css">
   <script src="./script.js" defer></script>
